spade-tests/src/snapshots/spade_tests__const_generics__simple_unsatisfied_int_constraint_in_where_clause_on_impl_block_errors.snap
---
source: spade-tests/src/const_generics.rs
---
impl <#uint N, #uint O> int<N>
where O: { N + 2 }
{
    fn add_one(self) -> int<O> {
        self + 1
    }
}

fn test() -> int<10> {
    10i8.add_one()
}


error: Output type mismatch. Expected int<10>, got int<9>
  ┌─ testinput:4:32
  │  
4 │       fn add_one(self) -> int<O> {
  │                           ------ int<10> type specified here
  │ ╭────────────────────────────────^
5 │ │         self + 1
  │ │         -------- Type 9 inferred here
6 │ │     }
  │ ╰─────^ Found type int<9>
  │  
  = note: Expected: 10
                in: int<10>
               Got: 9
                in: int<9>
  = The error is in a generic unit instantiated at
    ╰ testinput:10 impl_7::add_one<8, 10>
