spade-tests/src/snapshots/spade_tests__const_generics__trait_bounds_from_where_clause_not_fully_satisfied.snap
---
source: spade-tests/src/const_generics.rs
---
trait X {}
trait Y {}
impl X for bool {}
fn test<T>(x: T)
    where T: X + Y
{
    test(false)
}


error: Trait bound not satisfied. bool does not implement Y
  ┌─ testinput:7:10
  │
5 │     where T: X + Y
  │                  - Y Required because of the trait bound specified here
6 │ {
7 │     test(false)
  │          ^^^^^ bool does not implement Y
