spade-tests/src/snapshots/spade_tests__const_generics__type_expressions_in_generic_parameter_lower_correctly.snap
---
source: spade-tests/src/const_generics.rs
expression: "itertools :: Itertools ::\njoin(& mut items.iter().map(| item | format! (\"{item}\")), \"\\n\")"
---
entity \bar () -> () {
	const e4: uint<3> = 0
	let e3: () = Instance(\foo[531] )(e4)
	let __n104: () = Alias(e3)
	const e7: uint<4> = 0
	let e6: () = Instance(\foo[532] )(e7)
	let __n105: () = Alias(e6)
	let e2: () = Nop()
} => e2
entity \foo[531] ((value, value_n103, uint<3>)) -> () {
	let e1: () = Nop()
} => e1
entity \foo[532] ((value, value_n103, uint<4>)) -> () {
	let e1: () = Nop()
} => e1
