spade-tests/src/snapshots/spade_tests__const_generics__type_expressions_in_generic_parameters_type_check.snap
---
source: spade-tests/src/const_generics.rs
---
fn foo<#uint N>(value: uint<{N + 1}>) {}

fn bar() {
    let value: uint<2> = 0;
    foo::<2>(value)
}


error: Expected type 2, got 3
  ┌─ testinput:1:30
  │
1 │ fn foo<#uint N>(value: uint<{N + 1}>) {}
  │                              ^^^^^ Expected 2, got 3
  ·
5 │     foo::<2>(value)
  │              ----- The error occurred when unifying types here
  │
  = note: Expected: 2
                in: 2
               Got: 3
                in: 3
